style.css
*	{
	box-sizing: border-box;
	margin: 0;
	padding: 0;
}

body    {
    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
}

main    {
    padding: 50px;
}

h3  {
    font-size: 5rem;
}

h4  {
    font-size: 4rem;
}

h5  {
    font-size: 3rem;
}

h6  {
    font-size: 2rem;
}

p   {
    font-size: 1rem;
}

.page-header    {
    background-color: red;
    display: flex;
}

.heading  {
    font-size: 60px;
    margin: 20px;
}

.nav-bar {
    font-size: 26px;
    margin-top: 40px;
}

.barLink    {
    padding: 15px;
    background-color: black;
    margin: 0px 20px 0px 20px;
    border-radius: 30px;
}

.pageTitle  {
    font-size: 45px;
    display: block;
}

.name   {
    font-size: 45px;
}

.projDesc   {
    float: left;
    padding: 20px;
    margin: 50px;
    width: 500px;
}

.projImg    {
    float: right;
    width: 500px;
    margin: 50px;
}

a.barLink:link  {
    color: white;
    text-decoration: none;
}

a.barLink:visited   {
    color: white;
}

a.barLink:hover{
    color:dodgerblue;
}

.profile    {
    padding: 10px;
    margin: 10px;
}

.kyle   {
    width: 300px;
    border: 2px solid black;
}

.headshot   {
    float: left;
    display: block;
}

.bio    {
    display: inline-block;
    padding: 40px;
}

.contact, .dates    {
    float: right;
}

